<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Temporizador</string>
    <string name="select_mode">Selecciona un modo</string>
    <string name="mode_routine">Modo Rutina</string>
    <string name="mode_routine_desc">Intervalos de trabajo y descanso personalizables</string>
    <string name="mode_death_burpees">Muerte por Burpees</string>
    <string name="mode_death_burpees_desc">Beep cada minuto con aviso de 5 segundos</string>
    <string name="duration_minutes">Duración</string>
    <string name="minute_counter">Minuto %d</string>
    <string name="burpees_label">Burpees</string>
    <string name="hint_minutes">Minutos</string>
    <string name="label_duration">duración</string>
    <string name="label_mins">mins</string>
    <string name="label_work">serie</string>
    <string name="label_rest">descanso</string>
    <string name="label_sets">series</string>
    <string name="hint_work_duration_sec">Serie (seg)</string>
    <string name="hint_work_duration_min">Serie (min)</string>
    <string name="hint_rest_duration_sec">Descanso (seg)</string>
    <string name="hint_rest_duration_min">Descanso (min)</string>
    <string name="hint_total_sets">Series</string>
    <string name="phase_work">TRABAJO</string>
    <string name="phase_rest">DESCANSO</string>
    <string name="set_counter" formatted="false">Serie %d/%d</string>
    <string name="btn_start">Iniciar</string>
    <string name="btn_stop">Detener</string>
    <string name="btn_reset">Reiniciar</string>
    <string name="timer_format" formatted="false">%02d:%02d</string>
    <string name="notification_channel_name">Temporizador Activo</string>
    <string name="notification_channel_description">Muestra el progreso del temporizador</string>
    <string name="notification_title">Temporizador en ejecución</string>
    <string name="notification_text">Tiempo restante: %s</string>
    <string name="timer_finished">¡Tiempo completado!</string>
    <string name="unit_seconds">Seg</string>
    <string name="unit_minutes">Min</string>
    <string name="error_invalid_time">Ingresa un valor entre 1 y 999</string>
</resources>
